--- a/wwwroot/css/cssstyle.css
+++ b/wwwroot/css/cssstyle.css
@@ -798,6 +798,40 @@ textarea:-ms-input-placeholder {
 }
 
 
+/*print button media */
+
+@media print {
+    body * {
+        visibility: hidden;
+    }
+
+    #printable-card, #printable-card * {
+        visibility: visible;
+    }
+
+    #printable-card {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        box-shadow: none;
+        border: none;
+    }
+
+    #print-button {
+        display: none;
+    }
+}
+
+
+
+
+
+
+
+
 
 
 
