--- a/Views/Shared/Extra/_Layout1.cshtml
+++ b/Views/Shared/Extra/_Layout1.cshtml
@@ -75,7 +75,6 @@
 
 
 
-
 <!DOCTYPE html>
 
 <html>
@@ -98,7 +97,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-secondary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <li>
             <!-- Sidebar - Brand -->
@@ -272,54 +271,26 @@
                             </div>
                         </li>
 
-                        <!-- Nav Item - Alerts -->
                         <li class="nav-item dropdown no-arrow mx-1">
                             <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                               onclick="loadNotifications()">
                                 <i class="fas fa-bell fa-fw"></i>
-                                <!-- Counter - Alerts -->
-                                <span class="badge badge-danger badge-counter">33+</span>
+                                @if (unreadCount > 0)
+                                {
+                                    <span class="badge badge-danger badge-counter">@unreadCount</span>
+                                }
                             </a>
-                            <!-- Dropdown - Alerts -->
+
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
-                                    Alerts Center
+                                    Notification Center
                                 </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-primary">
-                                            <i class="fas fa-file-alt text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 12, 2019</div>
-                                        <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-success">
-                                            <i class="fas fa-donate text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 7, 2019</div>
-                                        $290.29 has been deposited into your account!
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-warning">
-                                            <i class="fas fa-exclamation-triangle text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 2, 2019</div>
-                                        Spending Alert: We've noticed unusually high spending for your account.
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                                <div id="notificationsContainer">
+                                  
+                                </div>
+                                <a class="dropdown-item text-center small text-red-500" asp-area="Customer" asp-controller="Notifications" asp-action="Latest">Show All Alerts</a>
                             </div>
                         </li>
 
@@ -601,7 +572,22 @@
     <script src="@Url.Content("~/deshboard/js/demo/chart-pie-demo.js")"></script>
 
 
+    <script>
+        function loadNotifications() {
+            $.ajax({
+                url: '/Customer/Notifications/GetLatest',
+                type: 'GET',
+                success: function (data) {
+                    $('#notificationsContainer').html(data);
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error fetching notifications:', error);
+                }
+            });
+        }
 
+
+    </script>
 
 
     @RenderSection("Scripts", required: false)
