--- a/Views/Shared/Extra/_Layout1.cshtml
+++ b/Views/Shared/Extra/_Layout1.cshtml
@@ -122,33 +122,32 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                Account
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                <a class="nav-link collapsed"  asp-area="User" asp-controller="Deshboard" asp-action="MyAccount/@userId" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                    <span>My Account</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href="/User/Deshboard/MyAccount/@userId">Profile</a>
+                        <a class="collapse-item" asp-area="User" asp-controller="Deshboard" asp-action="Edit" asp-route-id="@userId">Setting</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                   aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link " asp-area="User" asp-controller="Deshboard" asp-action="Edit" asp-route-id="@userId" data-target="#collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Utilities</span>
+                    <span>Setting</span>
                 </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                @* <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
@@ -157,7 +156,7 @@
                         <a class="collapse-item" href="utilities-animation.html">Animations</a>
                         <a class="collapse-item" href="utilities-other.html">Other</a>
                     </div>
-                </div>
+                </div> *@
             </li>
 
             <!-- Divider -->
@@ -165,7 +164,7 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Addons
+                Pages
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -173,7 +172,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                    aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <span>Order</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
@@ -201,7 +200,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span>
+                    <span>List</span>
                 </a>
             </li>
 
@@ -311,11 +310,11 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="userDropdown">
-                                    <a class="dropdown-item" href="/Customer/UserProfile/Deshboard/@userId">
+                                    <a class="dropdown-item" asp-area="User" asp-controller="Deshboard" asp-action="MyAccount" asp-route-id="@userId">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
-                                <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" asp-area="User" asp-controller="Deshboard" asp-action="Edit" asp-route-id="@userId">
                                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Settings
                                 </a>
@@ -356,13 +355,13 @@
                 </div>
                 <!-- /.container-fluid -->
 
-            </div>
+       
 
             <partial name="_CookieConsentPartial" />
             <div>
                 @RenderBody()
             </div>
-
+            </div>
             <!-- End of Main Content -->
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
