--- a/Views/Shared/Extra/_Layout1.cshtml
+++ b/Views/Shared/Extra/_Layout1.cshtml
@@ -86,7 +86,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
 
-    <link href="@Url.Content("~/deshboard/css/sb-admin-2.css")" rel="stylesheet" type="text/css">
+    <link href="@Url.Content("~/desh/css/sb-admin-2.css")" rel="stylesheet" type="text/css">
 
     <script src="https://kit.fontawesome.com/238e4a8eca.js" crossorigin="anonymous"></script>
 
@@ -301,11 +301,11 @@
                         {
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
-                                <a class="nav-link dropdown-toggle" href="/Customer/UserProfile/Deshboard/@userId" id="userDropdown" role="button"
+                                <a class="nav-link dropdown-toggle" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="mr-2 d-none d-lg-inline text-gray-600 small">@UserManager.GetUserName(User)</span>
                                 <img class="img-profile rounded-circle"
-                                     src="~/deshboard/img/undraw_profile.svg">
+                                     src="~/desh/img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -388,20 +388,20 @@
 
 
     <!-- Bootstrap core JavaScript-->
-    <script src="@Url.Content("~/deshboard/vendor/jquery/jquery.min.js")"></script>
-    <script src="@Url.Content("~/deshboard/vendor/bootstrap/js/bootstrap.bundle.min.js")"></script>
+    <script src="@Url.Content("~/desh/vendor/jquery/jquery.min.js")"></script>
+    <script src="@Url.Content("~/desh/vendor/bootstrap/js/bootstrap.bundle.min.js")"></script>
 
 
-    <script src="@Url.Content("~/deshboard/vendor/jquery-easing/jquery.easing.min.js")"></script>
+    <script src="@Url.Content("~/desh/vendor/jquery-easing/jquery.easing.min.js")"></script>
 
 
-    <script src="@Url.Content("~/deshboard/js/sb-admin-2.min.js")"></script>
+    <script src="@Url.Content("~/desh/js/sb-admin-2.min.js")"></script>
 
-    <script src="@Url.Content("~/deshboard/vendor/chart.js/Chart.min.js")"></script>
+    <script src="@Url.Content("~/desh/vendor/chart.js/Chart.min.js")"></script>
 
     <!-- Page level custom scripts -->
-    <script src="@Url.Content("~/deshboard/js/demo/chart-area-demo.js")"></script>
-    <script src="@Url.Content("~/deshboard/js/demo/chart-pie-demo.js")"></script>
+    <script src="@Url.Content("~/desh/js/demo/chart-area-demo.js")"></script>
+    <script src="@Url.Content("~/desh/js/demo/chart-pie-demo.js")"></script>
 
 
     <script>
