--- a/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
+++ b/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OrganicOption.Models.Rider_Section.RiderOfferViewModel
 
 
-<div class="top-bar text-dark p-2 text-center justify-content-center">
+@* <div class="top-bar text-dark p-2 text-center justify-content-center">
     <ul class="nav text-center justify-content-center">
         <li class="nav-item">
             <a class="nav-link text-light" href="#">
@@ -29,7 +29,7 @@
             </a>
         </li>
     </ul>
-</div>
+</div> *@
 
 @if (Model != null)
 {
